@@ -193,6 +193,7 @@ fixed bugs:
 - fixed bug in cons_knapsack.c: In SCIPseparateRelaxedKnapsack() not all variables need to be active in deeper regions of the tree
 - fixed potential bug with pseudo solution branching on free variables
 - fixed bug in cons_bounddisjunction.c: presolve may have tried to tighten bounds on a multiaggregated variable (now upgrades to linear constraint)
+- fixed bug while deleting redundant variables, which have no influence on changing the feasibility of the linear constraints, we need to update the sides of the constraint at each step, bug number 51 in bugzilla 
 
 plugins:
 - added constraint handler for second order cone constraints (cons_soc.(c|h))
